Fixed issue with extra padding on login form Issue: MIRTH-2251

--- a/webadmin/WebContent/css/main.css
+++ b/webadmin/WebContent/css/main.css
@@ -533,7 +533,7 @@ tr.notAccepted {
 }
 
 #webLoginForm{
-	margin-bottom: 0px;
+	margin-bottom: -9px;
 }
 
 #loginErrorAlert{
